# coco-ai-bidi-streaming

./: .firebaserc  .gitignore  AGENTS.md  README.md  cloudbuild.yaml  config.sh  firebase.json  firestore.indexes.json  firestore.rules  initial_setup_infra.sh  pyproject.toml  storage.rules
agent/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
agent/app/: agent.py  config.py  prompts.py  tools.py
agent/app/routers/: websocket.py
agent/app/services/: firestore_service.py  image_gen.py  session_factory.py
agent/app/sub_agents/image_gen/: agent.py  prompts.py  service.py  tools.py
agent/app/tools/: image_gen.py
app/: README.md  firebase.json  pubspec.yaml
app/lib/: firebase_options.dart  main.dart
app/lib/config/: app_config.dart  app_theme.dart
app/lib/features/auth/: login_screen.dart
app/lib/features/chat/data/: chat_repository.dart
app/lib/features/chat/logic/: chat_provider.dart  firestore_providers.dart
app/lib/features/chat/ui/: chat_area.dart  chat_list_screen.dart  chat_screen.dart  chat_sidebar.dart  home_screen.dart  image_display.dart  message_bubble.dart  message_list.dart
app/lib/models/: chat.dart  chat.freezed.dart  chat.g.dart  chat_state.dart  chat_state.freezed.dart  image_job.dart  image_job.freezed.dart  image_job.g.dart  message.dart  message.freezed.dart  message.g.dart  models.dart
app/lib/services/: storage_service.dart
functions/: README.md  main.py  pyproject.toml  requirements.txt
