[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "google-adk>=1.18.0",
    "google-cloud-aiplatform>=1.127.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.5.0",
    "google-genai>=1.50.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "tenacity>=9.1.2",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    # リンターとフォーマッターを兼ねる
    "ruff",
]
